[gd_scene load_steps=4 format=3 uid="uid://dr33yfph6wx08"]

[ext_resource type="Script" path="res://scripts/test_enemy.gd" id="1_j32gi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nhd25"]
size = Vector2(48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ecq5p"]
size = Vector2(64, 56)

[node name="TestEnemy" type="CharacterBody2D"]
collision_layer = 20
collision_mask = 3
script = ExtResource("1_j32gi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nhd25")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_ecq5p")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.788235, 0.239216, 0.917647, 1)
polygon = PackedVector2Array(24, -24, 24, 24, -24, 24, -24, -24)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -24.0
offset_top = -16.0
offset_right = 40.0
offset_bottom = 40.0
text = "Enemy"

[node name="RightGroundRay" type="RayCast2D" parent="."]
position = Vector2(24, 8)
target_position = Vector2(0, 24)

[node name="LeftGroundRay" type="RayCast2D" parent="."]
position = Vector2(-24, 8)
target_position = Vector2(0, 24)

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
